Fixed z-index button/utilities console overlay

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -10,7 +10,7 @@
 	font-size: 1.2em;
 	border: none;
 	//border-radius: 7px;
-	z-index: 9876543;
+	z-index: $z-create-btn;
 	img {
 		vertical-align: middle;
 		padding: 0px 5px;
