--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -8,6 +8,7 @@ $z-sidebar: 999;
 $z-infobar: 975;
 $z-utilitybelt: 970;
 $z-search: 960;
+$z-create-btn: 940;
 $z-toolbar: 920;
 $z-console: 900;
 
